--- a/css-portfolio/media-gueries/style.css
+++ b/css-portfolio/media-gueries/style.css
@@ -1,15 +1,19 @@
 
+  *{
+    padding: 0;
+    
+  }
+      
+
+
 body {
     background-color: pink;
   }
   
-  @media screen and (min-width: 470px) {
+  @media screen and (max-width: 600px) {
     body {
       background-color: lightgreen;
     }
   }
+  
 
-  a{
-      justify-content: space-between;
-      justify-content: space-around;
-  }
