--- a/css-portfolio/css-background-mage/style.css
+++ b/css-portfolio/css-background-mage/style.css
@@ -7,10 +7,8 @@ body{
 background-image: url(damiano-baschiera-hFXZ5cNfkOk-unsplash.jpg);
 background-repeat: no-repeat;
 background-size: cover;
-height: 500px;
-width: 500px;
-background-position: center;
-background-size: contain;
 
+background-position:300px;
+background-position: center;
 
 }
