--- a/css-portfolio/css-variable-fonts/style.css
+++ b/css-portfolio/css-variable-fonts/style.css
@@ -1,3 +1,11 @@
+
+ *{
+  padding: 0;
+  
+}
+
+
+
 .serif {
     
     font-family: 'Grandstander', cursive;
@@ -9,7 +17,6 @@
   }
   
   .monospace {
-    font-family: "Lucida Console", Courier, monospace;
     font-family: 'Grandstander', cursive;
 
   }
