--- a/Portifilo/Home/style.css
+++ b/Portifilo/Home/style.css
@@ -8,7 +8,7 @@ h1{
     justify-self:center;
     justify-items: center;
     text-align: center;
-    
+    size: 700%;
 }
 img{
     display: block;
