--- a/Portfolio-website/style.css
+++ b/Portfolio-website/style.css
@@ -8,7 +8,9 @@ body, html {
     border-radius:0px;
     margin-bottom: 0px;
   }
-  
+  .navbar-brand , ul.nav{
+    font-family: Ubuntu;
+  }
   .navbar-brand, .navbar-default .navbar-nav > li > a {
       font-size: 18px;
       font-weight: 300;
@@ -58,6 +60,38 @@ body, html {
   }
   .point {
     font-family: 'Open Sans Condensed', sans-serif;
+  }
+  .social {
+    text-align: center;
+    background-color: #164f5a;
+    color: #ffffff;
+    padding: 40px;
+  }
+  large-div {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+  .space {
+      padding: 20px;
+  }
+ 
+  .social-links {
+      padding: 0;
+      list-style: none;
+      margin: 15px 0;
+  }
+  .social-links li {
+      margin: 10px 25px 10px 0;
+      display: inline-block;
+      font-size: 36px;
+  }
+  .social-links li a {
+      color: #ffffff;
+      -webkit-transition: all 0.2s ease-in-out;
+      -moz-transition: all 0.2s ease-in-out;
+      -o-transition: all 0.2s ease-in-out;
+      -ms-transition: all 0.2s ease-in-out;
+      transition: all 0.2s ease-in-out;
   }
   
   
