--- a/Portfolio-website/style.css
+++ b/Portfolio-website/style.css
@@ -21,6 +21,17 @@ body, html {
     background-color: #164f5a;
     color: #ffffff;
     padding: 80px;
+    list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
   }
   #banner-name {
     -webkit-animation-delay: 2s;
